2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/utmp.c, libmisc/age.c, libmisc/shell.c, lib/groupio.c,
	lib/groupio.h, lib/sgroupio.c, lib/sgroupio.h, lib/shadowio.c,
	lib/pwio.c, lib/commonio.c, lib/shadowio.h, lib/pwio.h,
	lib/commonio.h, lib/prototypes.h: Added splint annotations.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/utmp.c: Only set ut_time and ut_tv if gettimeofday()
	succeeds.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/utmp.c: Fix the check for empty host in prepare_utmp()
	and prepare_utmpx().

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/utmp.c: The ut argument of prepare_utmp() and
	prepare_utmpx () might be NULL. ut_id needs to be forged in that
	case.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/utmp.c: Removed old documentation of setutmp().

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/utmp.c: Use xmalloc() rather than malloc().

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/utmp.c: The name returned by ttyame() needs to be copied
	locally.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Added assert()s for NULL (or ! NULL) username, and
	pwd. This helps splint.
	* src/login.c: Added splint annotations.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: After login_prompt(), do not check for unset
	username, but for empty username.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/defines.h: Define USER_NAME_MAX_LENGTH, based on utmp and
	default to 32.
	* libmisc/chkname.c: Use USER_NAME_MAX_LENGTH.
	* src/login.c: Use USER_NAME_MAX_LENGTH instead of the default 32.
	username also needs to be bigger than USER_NAME_MAX_LENGTH because
	it has to be nul-terminated.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>
