@@ -1,5 +1,9 @@
 2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* lib/defines.h: Added splint definitions to replace <locale.h>
+
+2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* libmisc/utmp.c, libmisc/age.c, libmisc/shell.c, lib/groupio.c,
 	lib/groupio.h, lib/sgroupio.c, lib/sgroupio.h, lib/shadowio.c,
 	lib/pwio.c, lib/commonio.c, lib/shadowio.h, lib/pwio.h,
